trunk/Archive2/d5/2ffbb41a9933df/output
main.cpp: In function 'int main()':
main.cpp:21:26: error: use of deleted function 'CRef::CRef(const Test&&)'
    CRef ref2{std::move(t)};                                                               
                          ^
main.cpp:12:4: error: declared here
    CRef(const Test&&) = delete;                                                           
    ^
